# global-genie2

./: .gitignore  API_REFERENCE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  GETTING_STARTED.md  LICENSE  PYPI_METADATA_SUMMARY.md  README.md  TESTING_STRATEGY_README.md  TROUBLESHOOTING.md  cleanup_project.py  final_git_cleanup.py  git_repo_setup.md  github_push_guide.md  setup_new_repo.md  test_requirements.txt  verify_without_dependencies.py  windows_setup_commands.md
.github/: pull_request_template.md
libs/infra/globalgenie_aws/: README.md  pyproject.toml  requirements.txt
libs/infra/globalgenie_aws/globalgenie/aws/: api_client.py  resources.py
libs/infra/globalgenie_aws/globalgenie/aws/app/: __init__.py  base.py
libs/infra/globalgenie_aws/globalgenie/aws/app/celery/: __init__.py  worker.py
libs/infra/globalgenie_aws/globalgenie/aws/app/django/: __init__.py  django.py
libs/infra/globalgenie_aws/globalgenie/aws/app/fastapi/: __init__.py  fastapi.py
libs/infra/globalgenie_aws/globalgenie/aws/app/streamlit/: __init__.py  streamlit.py
libs/infra/globalgenie_aws/globalgenie/aws/resource/: base.py  reference.py  types.py
libs/infra/globalgenie_aws/globalgenie/aws/resource/acm/: __init__.py  certificate.py
libs/infra/globalgenie_aws/globalgenie/aws/resource/cloudformation/: stack.py
libs/infra/globalgenie_aws/globalgenie/aws/resource/ec2/: __init__.py  security_group.py  subnet.py  volume.py
libs/infra/globalgenie_aws/scripts/: format.bat  format.sh  generate_requirements.sh  release_manual.sh  test.sh  validate.bat  validate.sh
(+1853 files in other folders)
